--- a/vanora2/index.html
+++ b/vanora2/index.html
@@ -41,8 +41,8 @@
 <body class="min-h-screen flex flex-col items-center justify-start p-4 text-center text-base text-text font-sans">
   <!-- Logo / Nombre -->
   <img src="vanoraLogo.png" alt="Vanora Logo" class="w-24 h-24 mt-4 mb-2 rounded-full object-cover">
-  <h1 class="text-3xl font-bold text-text mt-4">Vanora</h1>
-  <p class="text-text text-sm mb-6">Conecta con la esencia de tu cabello.
+  <h1 class="text-3xl font-bold text-text mt-4">VANORA COSMETICS</h1>
+  <p class="text-text text-sm mb-6">✨Conecta con la ESENCIA de tu cabello✨
 
 </p>
 
