--- a/vanora2/index.html
+++ b/vanora2/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vanora - Bienestar Capilar</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
   <style>
     :root {
       --main-bg: #f9f0ef;
@@ -17,100 +18,53 @@
       background-color: var(--main-bg);
     }
 
-      .btn-custom {
-    background-color: var(--primary);
-    color: white;
-    border-radius: 9999px; /* Esto equivale a rounded-full */
-    padding: 0.75rem 1.5rem;
-    font-size: 1.125rem;
-    font-weight: 500;
-    box-shadow: 6px 6px 0px #4a154b; /* sombra similar a la imagen */
-    transition: transform 0.2s ease, box-shadow 0.2s ease;
-  }
+    .btn-custom {
+      background-color: var(--primary);
+      color: white;
+      border-radius: 9999px;
+      padding: 0.75rem 1.5rem;
+      font-size: 1.125rem;
+      font-weight: 500;
+      box-shadow: 6px 6px 0px #4a154b;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+    }
 
-  .btn-custom:hover {
-    background-color: #a35779;
-    transform: translateY(-2px);
-    box-shadow: 8px 8px 0px #4a154b;
-  }
+    .btn-custom:hover {
+      background-color: #a35779;
+      transform: translateY(-2px);
+      box-shadow: 8px 8px 0px #4a154b;
+    }
   </style>
-
-  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
-
 </head>
 <body class="min-h-screen flex flex-col items-center justify-start p-4 text-center text-base text-text font-sans">
-  <!-- Logo / Nombre -->
-  <img src="vanoraLogo.png" alt="Vanora Logo" class="w-24 h-24 mt-4 mb-2 rounded-full object-cover">
-  <h1 class="text-3xl font-bold text-text mt-4">VANORA COSMETICS</h1>
-  <p class="text-text text-sm mb-6">✨Conecta con la ESENCIA de tu cabello✨
 
-</p>
+  <!-- Logo / Nombre -->
+  <div class="flex flex-col items-center mt-6 mb-4">
+    <img src="vanoraLogo.png" alt="Vanora Logo" class="w-24 h-24 mt-4 mb-2 rounded-full object-cover">
+    <h1 class="text-3xl font-bold text-text mt-4">VANORA COSMETICS</h1>
+    <p class="text-text text-sm mt-1">✨Conecta con la ESENCIA de tu cabello✨</p>
+  </div>
 
   <!-- Botones estilo Linktree -->
   <div class="flex flex-col w-full max-w-sm gap-4">
-    <button id="whatsappBtn" class="btn-custom rounded-full py-3 px-6 text-lg shadow-md">📲 Asesoría en Whatsapp</button>
-    <button id="mercadoPagoBtn" class="btn-custom rounded-full py-3 px-6 text-lg shadow-md">🛍️ Compra directa en la web</button>
-    <!--<a href="https://tuweb.com/crecimiento" class="btn-custom rounded-full py-3 px-6 text-lg shadow-md">Todo de crecimiento & anticaída</a>
-    <a href="https://tuweb.com/marca" class="btn-custom rounded-full py-3 px-6 text-lg shadow-md">¿Esta marca es MOI HAIRCARE?</a>-->
-    <a href="manualProducto.pdf" class="btn-custom rounded-full py-3 px-6 text-lg shadow-md">Sobre nosotros 💗</a>
+    <button id="whatsappBtn" class="btn-custom text-lg shadow-md">📲 Asesoría en Whatsapp</button>
+    <a href="compra.html" target="_blank" class="btn-custom text-lg shadow-md text-center">🛍️ Compra directa en la web</a>
+    <a href="manualProducto.pdf" class="btn-custom text-lg shadow-md">📄 Ver manual del producto</a>
   </div>
 
-  <!-- Producto Estrella con fondo suavizado -->
-  <section class="mt-10 w-full flex justify-center">
-    <div class="w-full max-w-sm rounded-2xl overflow-hidden shadow-lg bg-center bg-cover relative" style="background-image: url('VanImg.png');">
-      <!-- Capa rosada semitransparente -->
-      <div class="absolute inset-0" style="background-color: rgba(255, 230, 236, 0.75);"></div>
-
-      <!-- Contenido sobre el fondo -->
-      <div class="relative p-6 text-text">
-        <h2 class="text-2xl font-extrabold mb-4 text-center drop-shadow-md">Producto Estrella</h2>
-        <ul class="space-y-2 text-base font-medium text-left drop-shadow-sm">
-          <li>🔥 Protección térmica</li>
-          <li>🌬️ Protección contra agentes externos</li>
-          <li>💧 Sin residuos grasos</li>
-          <li>✨ Disminuye el frizz</li>
-          <li>🧼 Facilita el planchado y el cepillado</li>
-          <li>💎 Cabello brillante, suave y manejable</li>
-          <li>🌈 Apto para todo tipo de cabello</li>
-        </ul>
-      </div>
-    </div>
-  </section>
-
+  <!-- Icono de TikTok -->
   <div class="flex justify-center items-center mt-6">
-  <a href="https://www.tiktok.com/@vanoracosmetics?_t=ZS-8xkxiesN5r0&_r=1" 
-   target="_blank" 
-   aria-label="TikTok"
-   class="transition-transform transform hover:scale-110 hover:opacity-80">
-  <svg xmlns="http://www.w3.org/2000/svg" fill="#6b1e58" viewBox="0 0 24 24" width="40" height="40">
-    <path d="M16.5 1a5.5 5.5 0 0 0 5.5 5.5v3.25a8.75 8.75 0 0 1-6.58-3.22v7.39a6.17 6.17 0 1 1-6.17-6.17c.56 0 1.1.08 1.61.23v3.32a2.84 2.84 0 1 0 2.84 2.84V1h2.8Z"/>
-  </svg>
-</a>
+    <a href="https://www.tiktok.com/@vanoracosmetics?_t=ZS-8xkxiesN5r0&_r=1" 
+      target="_blank" 
+      aria-label="TikTok"
+      class="transition-transform transform hover:scale-110 hover:opacity-80">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="#6b1e58" viewBox="0 0 24 24" width="40" height="40">
+        <path d="M16.5 1a5.5 5.5 0 0 0 5.5 5.5v3.25a8.75 8.75 0 0 1-6.58-3.22v7.39a6.17 6.17 0 1 1-6.17-6.17c.56 0 1.1.08 1.61.23v3.32a2.84 2.84 0 1 0 2.84 2.84V1h2.8Z"/>
+      </svg>
+    </a>
+  </div>
 
-</div>
-
-
-  <!-- Detalles del producto -->
-  <div
-  data-aos="fade-up"
-  class="w-full max-w-md bg-cover bg-center rounded-xl shadow-lg p-6 my-6 text-left"
-  style="background-image: linear-gradient(rgba(255, 230, 236, 0.75), rgba(255, 230, 236, 0.75)), url('VanImg2.png');"
->
-  <h2 class="text-xl font-bold mb-4 text-text flex justify-center">Detalles del Producto</h2>
-  <p class="text-text mb-4">
-    Estos activos combinados ofrecen hidratación, reparación, protección térmica y un acabado suave y brillante.
-  </p>
-  <ul class="text-text list-disc list-inside space-y-2">
-    <li><strong>🌰 Aceite de Argán:</strong> Nutre, repara y da brillo al cabello dañado, protegiendo las puntas abiertas.</li>
-    <li><strong>🌿 Aceite de Jojoba:</strong> Hidrata sin dejar residuos, mejora la elasticidad y suaviza el cabello.</li>
-    <li><strong>🌸 Aceite de Almendra Dulce:</strong> Fortalece y repara las puntas abiertas, mejorando la textura y vitalidad.</li>
-    <li><strong>🛡️ Vitamina E:</strong> Protege contra el daño ambiental y preserva la salud del cabello.</li>
-    <li><strong>💧 Modo de uso:</strong> Aplicar de 4 a 5 gotas sobre la palma, frotar y distribuir de medios a puntas con masajes descendentes. No enjuagar.</li>
-  </ul>
-</div>
-
-
-  <!-- Popup de registro (simplificado) -->
+  <!-- Popup de registro -->
   <div id="popup" class="fixed inset-0 bg-black bg-opacity-40 flex items-center justify-center hidden">
     <div class="bg-white rounded-xl p-6 max-w-sm w-full shadow-lg relative">
       <button onclick="closePopup()" class="absolute top-2 right-4 text-lg">✖</button>
@@ -123,12 +77,9 @@
         <button type="submit" class="btn-custom w-full py-2 rounded">Obtener descuento</button>
       </form>
     </div>
-
-    
   </div>
 
   <script>
-    // Mostrar popup después de unos segundos (una vez por sesión)
     window.addEventListener('DOMContentLoaded', () => {
       if (!sessionStorage.getItem('popupShown')) {
         setTimeout(() => {
@@ -137,23 +88,12 @@
         }, 2000);
       }
 
-      // Botón WhatsApp
       const boton = document.getElementById("whatsappBtn");
       if (boton) {
         boton.addEventListener("click", () => {
           const mensaje = "Hola, quiero hacer un pedido del Producto Estrella.";
           const telefono = "573169478779";
           window.open(`https://wa.me/${telefono}?text=${encodeURIComponent(mensaje)}`, "_blank");
-        });
-      } else {
-        console.error("No se encontró el botón de WhatsApp.");
-      }
-
-      // Botón MercadoPago
-      const mpBtn = document.getElementById("mercadoPagoBtn");
-      if (mpBtn) {
-        mpBtn.addEventListener("click", () => {
-          window.open("https://mpago.li/1R3V6ND", "_blank");
         });
       }
     });
@@ -164,9 +104,7 @@
   </script>
 
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-<script>
-  AOS.init();
-</script>
+  <script> AOS.init(); </script>
 
 </body>
 </html>
